--- a/User CF with penalty.ipynb
+++ b/User CF with penalty.ipynb
@@ -1094,7 +1094,7 @@
    "source": [
     "# Calculate the norm popularity for each business, which is how many times each business is rated by users.\n",
     "training_popular = training.groupby('businessId').size().reset_index(name = 'popular')\n",
-    "training_popular['popular'] = training_popular['popular'] / (np.max(training_popular['popular'])-np.min(training_popular['popular']))"
+    "training_popular['popular'] = (training_popular['popular'] -  np.min(training_popular['popular']))/ (np.max(training_popular['popular'])-np.min(training_popular['popular']))"
    ]
   },
   {
@@ -1105,7 +1105,7 @@
    "source": [
     "# Calculate the norm popularity for each business, which is how many times each business is rated by users.\n",
     "test_popular = test.groupby('businessId').size().reset_index(name = 'popular')\n",
-    "test_popular['popular'] = test_popular['popular'] / (np.max(test_popular['popular'])-np.min(test_popular['popular']))"
+    "test_popular['popular'] = (test_popular['popular'] - np.min(test_popular['popular']))/ (np.max(test_popular['popular'])-np.min(test_popular['popular']))"
    ]
   },
   {
